# agentic-utils

./: .gitignore  README.md  pyproject.toml
agents/: README.md
agents/dynamic-math-agent/: README.md  main.py
agents/simple-chatbot/: README.md
agents/simple-math-agent/: README.md
agents/smart-chatbot/: README.md
agents/smart-math-agent/: README.md  call_agent.ps1  langgraph.json  main.py  server.py  system_prompt.py
mcp-servers/: README.md
mcp-servers/basic-math-server/: README.md  server.py
mcp-servers/basic-math-server/scripts/: call_tool.cmd  list_tools.cmd
mcp-servers/numerics-math-server/: README.md  server.py
mcp-servers/numerics-math-server/scripts/: call_tool.cmd  list_tools.cmd
